tests/errors/semantics/array_type_is_not_type.odl
main :: () -> void  {
    x := 10;
    arr := [1]x;
};